some changes for testing ^^

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -2145,7 +2145,7 @@ body.el-loading {
 }
 
 .text-brand {
-  color: #3f51b5;
+  color: #D32F2F;
 }
 
 .text-brand-accent {
@@ -2314,7 +2314,7 @@ body.el-loading {
 }
 
 .avatar-brand {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white;
 }
 .avatar-brand:focus, .avatar-brand:hover {
@@ -2468,11 +2468,11 @@ body.el-loading {
 }
 
 .btn-brand {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white;
 }
 .btn-brand:active, .btn-brand:focus, .btn-brand:hover {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white;
 }
 
@@ -2534,7 +2534,7 @@ body.el-loading {
 }
 
 .btn-flat.btn-brand {
-  color: #3f51b5;
+  color: #D32F2F;
 }
 .btn-flat.btn-brand[disabled], fieldset[disabled] .btn-flat.btn-brand {
   color: #7986cb;
@@ -2599,11 +2599,11 @@ body.el-loading {
 }
 
 .fbtn-brand {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white;
 }
 .fbtn-brand:active, .fbtn-brand:focus, .fbtn-brand:hover {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white;
 }
 .fbtn-brand:active {
@@ -2874,7 +2874,7 @@ body.el-loading {
 }
 
 .card-brand {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white;
 }
 .card-brand a,
@@ -3423,7 +3423,7 @@ fieldset[disabled] .form-control-default.picker__select--year {
 .form-group-brand .form-control:focus,
 .form-group-brand .picker__select--month:focus,
 .form-group-brand .picker__select--year:focus {
-  border-color: #3f51b5;
+  border-color: #D32F2F;
 }
 
 .form-group-brand-accent .form-control, .form-group-brand-accent .picker__select--month,
@@ -3575,7 +3575,7 @@ legend + .form-group {
 }
 
 .form-group-brand .form-label {
-  color: #3f51b5;
+  color: #D32F2F;
 }
 
 .form-group-brand-accent .form-label {
@@ -3776,7 +3776,7 @@ fieldset[disabled] input[type="checkbox"]:checked ~ .checkbox-circle-icon, input
 }
 @media only screen and (min-width: 992px) {
   .picker__box:before {
-    background-color: #3f51b5;
+    background-color: #D32F2F;
     border-radius: 4px 0 0 4px;
     content: "";
     display: block;
@@ -3790,7 +3790,7 @@ fieldset[disabled] input[type="checkbox"]:checked ~ .checkbox-circle-icon, input
 }
 
 .picker__date-display {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   border-radius: 4px 4px 0 0;
   color: white;
   padding: 12px 16px;
@@ -3822,14 +3822,14 @@ fieldset[disabled] input[type="checkbox"]:checked ~ .checkbox-circle-icon, input
   width: 36px;
 }
 .picker__day:focus, .picker__day:hover {
-  color: #3f51b5;
+  color: #D32F2F;
   cursor: pointer;
 }
 .picker__day.picker__day--highlighted {
-  color: #3f51b5;
+  color: #D32F2F;
 }
 .picker__day.picker__day--selected {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white !important;
 }
 
@@ -3966,7 +3966,7 @@ fieldset[disabled] input[type="checkbox"]:checked ~ .checkbox-circle-icon, input
 .picker__nav--next:focus, .picker__nav--next:hover,
 .picker__nav--prev:focus,
 .picker__nav--prev:hover {
-  color: #3f51b5;
+  color: #D32F2F;
 }
 @media only screen and (min-width: 992px) {
   .picker__nav--next,
@@ -4119,7 +4119,7 @@ legend + .form-group-label {
 }
 
 .form-group-label.form-group-brand .floating-label {
-  color: #3f51b5;
+  color: #D32F2F;
 }
 
 .form-group-label.form-group-brand-accent .floating-label {
@@ -4202,7 +4202,7 @@ input[type="checkbox"]:checked + .switch-toggle-brand, input[type="radio"]:check
   background-color: #7986cb;
 }
 input[type="checkbox"]:checked + .switch-toggle-brand:after, input[type="radio"]:checked + .switch-toggle-brand:after {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
 }
 input[type="checkbox"]:checked + .switch-toggle-brand:active:after, input[type="radio"]:checked + .switch-toggle-brand:active:after {
   box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.25), 0 0 0 12.5px rgba(63, 81, 181, 0.25);
@@ -4268,7 +4268,7 @@ input[type="checkbox"]:checked + .switch-toggle-red:active:after, input[type="ra
 }
 
 .label-brand {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white;
 }
 
@@ -4518,7 +4518,7 @@ input[type="checkbox"]:checked + .switch-toggle-red:active:after, input[type="ra
   background-color: #7986cb;
 }
 .progress-brand .progress-bar {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
 }
 
 .progress-green {
@@ -4686,7 +4686,7 @@ input[type="checkbox"]:checked + .switch-toggle-red:active:after, input[type="ra
 }
 
 .progress-circular-brand .progress-circular-gap {
-  border-top-color: #3f51b5;
+  border-top-color: #D32F2F;
 }
 
 .progress-circular-green .progress-circular-gap {
@@ -4757,13 +4757,13 @@ input[type="checkbox"]:checked + .switch-toggle-red:active:after, input[type="ra
 }
 
 .progress-circular-brand .progress-circular-spinner {
-  border-top-color: #3f51b5;
+  border-top-color: #D32F2F;
 }
 .progress-circular-brand .progress-circular-left .progress-circular-spinner {
-  border-left-color: #3f51b5;
+  border-left-color: #D32F2F;
 }
 .progress-circular-brand .progress-circular-right .progress-circular-spinner {
-  border-right-color: #3f51b5;
+  border-right-color: #D32F2F;
 }
 
 .progress-circular-brand-accent .progress-circular-spinner {
@@ -5085,7 +5085,7 @@ input[type="checkbox"]:checked + .switch-toggle-red:active:after, input[type="ra
 }
 
 .load-bar-progress-brand {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
 }
 
 .load-bar-progress-green {
@@ -5238,11 +5238,11 @@ input[type="checkbox"]:checked + .switch-toggle-red:active:after, input[type="ra
   border-bottom-color: #7986cb;
 }
 .tab-nav-brand .nav > li.active > a, .tab-nav-brand .nav > li.active > .a {
-  border-bottom-color: #3f51b5;
-  color: #3f51b5;
+  border-bottom-color: #D32F2F;
+  color: #D32F2F;
 }
 .tab-nav-brand .tab-nav-indicator.animate {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
 }
 
 .tab-nav-green .nav > li > a:focus, .tab-nav-green .nav > li > a:hover,
@@ -5403,7 +5403,7 @@ input[type="checkbox"]:checked + .switch-toggle-red:active:after, input[type="ra
 }
 
 .tile-brand {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white;
 }
 .tile-brand a,
@@ -5645,7 +5645,7 @@ div[data-toggle="tile"] [data-ignore="tile"] {
 }
 
 .page-brand .content-heading {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white;
 }
 
@@ -5681,7 +5681,7 @@ div[data-toggle="tile"] [data-ignore="tile"] {
 }
 
 .page-brand .content-sub-heading {
-  color: #3f51b5;
+  color: #D32F2F;
 }
 
 .page-brand-accent .content-sub-heading {
@@ -5753,7 +5753,7 @@ div[data-toggle="tile"] [data-ignore="tile"] {
 }
 
 .header-brand {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
   color: white;
 }
 
@@ -5846,7 +5846,7 @@ div[data-toggle="tile"] [data-ignore="tile"] {
   color: white;
 }
 .page-brand .header-transparent.affix {
-  background-color: #3f51b5;
+  background-color: #D32F2F;
 }
 
 .page-brand-accent .header-transparent {
@@ -5978,7 +5978,7 @@ div[data-toggle="tile"] [data-ignore="tile"] {
 }
 .menu-content .nav li.active > a,
 .menu-content .nav li.active > .a {
-  color: #3f51b5;
+  color: #D32F2F;
 }
 .menu-content .nav ul a,
 .menu-content .nav ul .a {
@@ -6003,7 +6003,7 @@ div[data-toggle="tile"] [data-ignore="tile"] {
 
 .page-brand .menu-content .nav li.active > a,
 .page-brand .menu-content .nav li.active > .a {
-  color: #3f51b5;
+  color: #D32F2F;
 }
 
 .page-brand-accent .menu-content .nav li.active > a,
