--- a/public/css/project.css
+++ b/public/css/project.css
@@ -18,7 +18,7 @@ body {
 }
 
 .page-brand .content-heading {
-  background-image: url(./images/bg/brand.jpg);
+  background-image: url(./images/bg/fond.jpg);
 }
 
 .ui-card-pre {
